// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<Wrapper
  checked={true}
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  hitSlop={
    Object {
      "bottom": 16,
      "left": 16,
      "right": 16,
      "top": 16,
    }
  }
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          Object {
            "position": "absolute",
          },
        ]
      }
    />
    <TouchableOpacity
      activeOpacity={1}
      appearance="default"
      dispatch={[Function]}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#EDF1F7",
            "borderColor": "#E4E9F2",
            "borderRadius": 12,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
      theme={
        Object {
          "background-alternative-color-1": "$color-basic-800",
          "background-alternative-color-2": "$color-basic-900",
          "background-alternative-color-3": "$color-basic-1000",
          "background-alternative-color-4": "$color-basic-1100",
          "background-basic-color-1": "$color-basic-100",
          "background-basic-color-2": "$color-basic-200",
          "background-basic-color-3": "$color-basic-300",
          "background-basic-color-4": "$color-basic-400",
          "background-primary-color-1": "$color-primary-500",
          "background-primary-color-2": "$color-primary-600",
          "background-primary-color-3": "$color-primary-700",
          "background-primary-color-4": "$color-primary-800",
          "border-alternative-color-1": "$color-basic-800",
          "border-alternative-color-2": "$color-basic-900",
          "border-alternative-color-3": "$color-basic-1000",
          "border-alternative-color-4": "$color-basic-1100",
          "border-alternative-color-5": "$color-basic-1100",
          "border-basic-color-1": "$color-basic-100",
          "border-basic-color-2": "$color-basic-200",
          "border-basic-color-3": "$color-basic-300",
          "border-basic-color-4": "$color-basic-400",
          "border-basic-color-5": "$color-basic-500",
          "border-primary-color-1": "$color-primary-500",
          "border-primary-color-2": "$color-primary-600",
          "border-primary-color-3": "$color-primary-700",
          "border-primary-color-4": "$color-primary-800",
          "border-primary-color-5": "$color-primary-900",
          "color-basic-100": "#FFFFFF",
          "color-basic-1000": "#151A30",
          "color-basic-1100": "#101426",
          "color-basic-200": "#F7F9FC",
          "color-basic-300": "#EDF1F7",
          "color-basic-400": "#E4E9F2",
          "color-basic-500": "#C5CEE0",
          "color-basic-600": "#8F9BB3",
          "color-basic-700": "#2E3A59",
          "color-basic-800": "#222B45",
          "color-basic-900": "#1A2138",
          "color-basic-active": "$color-basic-400",
          "color-basic-default": "$color-basic-200",
          "color-basic-disabled": "$color-basic-300",
          "color-basic-focus": "$color-basic-500",
          "color-danger-100": "#FFF2F2",
          "color-danger-200": "#FFD6D9",
          "color-danger-300": "#FFA8B4",
          "color-danger-400": "#FF708D",
          "color-danger-500": "#FF3D71",
          "color-danger-600": "#DB2C66",
          "color-danger-700": "#B81D5B",
          "color-danger-800": "#94124E",
          "color-danger-900": "#700940",
          "color-danger-active": "$color-danger-600",
          "color-danger-default": "$color-danger-500",
          "color-danger-disabled": "$color-danger-300",
          "color-danger-focus": "$color-danger-700",
          "color-info-100": "#F2F8FF",
          "color-info-200": "#C7E2FF",
          "color-info-300": "#94CBFF",
          "color-info-400": "#42AAFF",
          "color-info-500": "#0095FF",
          "color-info-600": "#006FD6",
          "color-info-700": "#0057C2",
          "color-info-800": "#0041A8",
          "color-info-900": "#002885",
          "color-info-active": "$color-info-600",
          "color-info-default": "$color-info-500",
          "color-info-disabled": "$color-info-300",
          "color-info-focus": "$color-info-700",
          "color-primary-100": "#F2F6FF",
          "color-primary-200": "#D9E4FF",
          "color-primary-300": "#A6C1FF",
          "color-primary-400": "#598BFF",
          "color-primary-500": "#3366FF",
          "color-primary-600": "#274BDB",
          "color-primary-700": "#1A34B8",
          "color-primary-800": "#102694",
          "color-primary-900": "#091C7A",
          "color-primary-active": "$color-primary-600",
          "color-primary-default": "$color-primary-500",
          "color-primary-disabled": "$color-primary-200",
          "color-primary-focus": "$color-primary-700",
          "color-secondary-100": "#F7F2FF",
          "color-secondary-200": "#E0D1FF",
          "color-secondary-300": "#C5A8FF",
          "color-secondary-400": "#A375FF",
          "color-secondary-500": "#884DFF",
          "color-secondary-600": "#6A39DB",
          "color-secondary-700": "#4F28B8",
          "color-secondary-800": "#371B94",
          "color-secondary-900": "#26117A",
          "color-success-100": "#EDFFF3",
          "color-success-200": "#B3FFD6",
          "color-success-300": "#8CFAC7",
          "color-success-400": "#51F0B0",
          "color-success-500": "#00E096",
          "color-success-600": "#00B383",
          "color-success-700": "#008F72",
          "color-success-800": "#007566",
          "color-success-900": "#00524C",
          "color-success-active": "$color-success-600",
          "color-success-default": "$color-success-500",
          "color-success-disabled": "$color-success-200",
          "color-success-focus": "$color-success-700",
          "color-tertiary-100": "#FFDED6",
          "color-tertiary-200": "#FFDED6",
          "color-tertiary-300": "#FFDED6",
          "color-tertiary-400": "#FFDED6",
          "color-tertiary-500": "#FFDED6",
          "color-tertiary-600": "#FFDED6",
          "color-tertiary-700": "#FFDED6",
          "color-tertiary-800": "#FFDED6",
          "color-tertiary-900": "#FFDED6",
          "color-warning-100": "#FFFDF2",
          "color-warning-200": "#FFF1C2",
          "color-warning-300": "#FFE59E",
          "color-warning-400": "#FFC94D",
          "color-warning-500": "#FFAA00",
          "color-warning-600": "#DB8B00",
          "color-warning-700": "#B86E00",
          "color-warning-800": "#945400",
          "color-warning-900": "#703C00",
          "color-warning-active": "$color-warning-600",
          "color-warning-default": "$color-warning-500",
          "color-warning-disabled": "$color-warning-300",
          "color-warning-focus": "$color-warning-700",
          "icon-active-color": "$color-primary-500",
          "icon-basic-color": "$color-basic-700",
          "icon-control-color": "$color-basic-100",
          "icon-disabled-color": "$color-basic-400",
          "icon-hint-color": "$color-basic-500",
          "outline-color": "$color-basic-400",
          "text-alternate-color": "$color-basic-100",
          "text-basic-color": "$color-basic-900",
          "text-control-color": "$color-basic-100",
          "text-danger-active-color": "$color-danger-active",
          "text-danger-color": "$color-danger-default",
          "text-danger-disabled-color": "$color-danger-disabled",
          "text-disabled-color": "$color-basic-500",
          "text-hint-color": "$color-basic-600",
          "text-info-active-color": "$color-info-active",
          "text-info-color": "$color-info-default",
          "text-info-disabled-color": "$color-info-disabled",
          "text-primary-active-color": "$color-primary-active",
          "text-primary-color": "$color-primary-default",
          "text-primary-disabled-color": "$color-primary-disabled",
          "text-success-active-color": "$color-success-active",
          "text-success-color": "$color-success-default",
          "text-success-disabled-color": "$color-success-disabled",
          "text-warning-active-color": "$color-warning-active",
          "text-warning-color": "$color-warning-default",
          "text-warning-disabled-color": "$color-warning-disabled",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 8,
              "height": 16,
              "width": 16,
            },
            Object {},
          ]
        }
      />
    </TouchableOpacity>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<Wrapper
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot with text (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  text="Place your text"
  textStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;
